# cablebot-build-and-test

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
applications/example/: CMakeLists.txt
applications/example/src/: main.cpp
applications/example/test/: CMakeLists.txt
libcablebot/: CMakeLists.txt  README.md
libcablebot/include/: CablebotDemo.h  ICablebotDemo.h
libcablebot/src/: CablebotDemo.cpp
libcablebot/test/: CMakeLists.txt
libcablebot/test/mocks/: CMakeLists.txt  CableBotDemoMock.h
libcablebot/test/src/: CableBotDemo_tests.cpp
